fix in run Sosie