@@ -11,19 +11,23 @@ do
     mkdir ../sosieInstru
     cp -r $sosie ../sosieInstru
     java -Xmx2000m -XX:MaxPermSize=256m -cp .:../../target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar fr.inria.diversify.sosie.MainInstru $sosie/jbehave-core/src/main/java/ ../sosieInstru/$sosie/jbehave-core/src/main/java
-    cp -r ../../utils/logger/ ../sosieInstru/$sosie/jbehave-core/src/main/java/
+    cp -r ../../utils/logger/fr ../sosieInstru/$sosie/jbehave-core/src/main/java/
 done
 
 #run des sosies
-mkdir ../log
-cd ../sosieInstru
+cd ..
+mkdir log
+cd sosieInstru
 for sosie in $(ls)
 do
+    echo sosie
+    echo $sosie
     cd $sosie
     LogDirName=$(date +%s)
-    echo $LogDirName
-    echo $sosie
+    echo logDirName
+        echo $LogDirName
     echo $LogDirName > jbehave-core/LogDirName
+    echo $LodDirName > LogDirName
     for i in `cat $2`
     do
         echo $i > jbehave-core/LogfileName
@@ -34,8 +38,5 @@ do
     cp $sosie/diversificationPoint ../log/log$LogDirName/
     cp -r $sosie/jbehave-core/log$LogDirName/ ../log/log$LogDirName/
 done
-#comparaison des traces original/sosie
-#    java -Xmx2000m -XX:MaxPermSize=256m target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar fr.inria.diversify.sosie $1 $
-#done
 
 
